dom/webgpu/ExternalTextureD3D11.cpp
@@ -101,7 +101,8 @@ Maybe<layers::SurfaceDescriptor> ExternalTextureD3D11::ToSurfaceDescriptor(
       /* gpuProcessTextureId */ Nothing(),
       /* arrayIndex */ 0, format, gfx::IntSize(mWidth, mHeight),
       gfx::ColorSpace2::SRGB, gfx::ColorRange::FULL,
-      /* hasKeyedMutex */ false, aFenceInfo));
+      /* hasKeyedMutex */ false, aFenceInfo,
+      /* gpuProcessQueryId */ Nothing()));
 }
 
 void ExternalTextureD3D11::GetSnapshot(const ipc::Shmem& aDestShmem,
