gfx/layers/ipc/LayersMessageUtils.h
@@ -244,6 +244,18 @@ struct ParamTraits<mozilla::layers::GpuProcessTextureId> {
 };
 
 template <>
+struct ParamTraits<mozilla::layers::GpuProcessQueryId> {
+  typedef mozilla::layers::GpuProcessQueryId paramType;
+
+  static void Write(MessageWriter* writer, const paramType& param) {
+    WriteParam(writer, param.mId);
+  }
+  static bool Read(MessageReader* reader, paramType* result) {
+    return ReadParam(reader, &result->mId);
+  }
+};
+
+template <>
 struct ParamTraits<mozilla::layers::FrameMetrics>
     : BitfieldHelper<mozilla::layers::FrameMetrics> {
   typedef mozilla::layers::FrameMetrics paramType;
